--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,22 @@
 plugins {
-  id 'application'
+  id 'java-library'
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.5.3'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
   id 'io.freefair.lombok' version '5.3.3.3'
+  id 'maven-publish'
+}
+
+publishing {
+  publications {
+    jarModule(MavenPublication) {
+      from components.java
+    }
+  }
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -164,7 +172,7 @@ def versions = [
   junit           : '5.7.2',
   junitPlatform   : '1.7.2',
   reformLogging   : '5.1.7',
-  springBoot      : springBoot.class.package.implementationVersion
+  spring : '2.5.3'
 ]
 
 ext.libraries = [
@@ -178,21 +186,17 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${versions.spring}"
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${versions.spring}"
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
 
-
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
   compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
 
-
   testImplementation libraries.junit5
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${versions.spring}", {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
@@ -203,18 +207,6 @@ dependencies {
   functionalTestImplementation sourceSets.main.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
-}
-
-mainClassName = 'uk.gov.hmcts.reform.demo.Application'
-
-bootJar {
-  getArchiveFileName().set(provider {
-    'spring-boot-template.jar'
-  })
-
-  manifest {
-    attributes('Implementation-Version': project.version.toString())
-  }
 }
 
 wrapper {
