--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 
 publishing {
   publications {
-    jarModule(MavenPublication) {
+    mavenJava(MavenPublication) {
       from components.java
     }
   }
