--- a/.github/workflows/jitpack_build.yml
+++ b/.github/workflows/jitpack_build.yml
@@ -17,6 +17,7 @@ jobs:
         echo "Triggering JitPack build"
         
         PACKAGES_URL="https://jitpack.io/com/github/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/tags/}/"
+        echo "Curling from: ${PACKAGES_URL}"
         PACKAGES_FILE="packages.txt"
         touch ${PACKAGES_FILE}
         # Try the URL 6 times before failing
