--- a/build.gradle
+++ b/build.gradle
@@ -147,7 +147,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${versions.spring}"
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${versions.spring}"
 
-  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.13.1"
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${versions.spring}", {
