--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.owasp.dependencycheck' version '6.2.2'
-  id 'com.github.ben-manes.versions' version '0.39.0'
-  id 'org.sonarqube' version '3.3'
-  id 'io.freefair.lombok' version '5.3.3.3'
+  id 'io.spring.dependency-management' version '1.1.0'
+  id 'org.owasp.dependencycheck' version '8.0.2'
+  id 'com.github.ben-manes.versions' version '0.45.0'
+  id 'org.sonarqube' version '3.5.0.2730'
+  id 'io.freefair.lombok' version '6.6.1'
   id 'maven-publish'
 }
 
@@ -23,8 +23,8 @@ group = 'com.github.hmcts'
 version = '1.4.0'
 
 allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
 }
 
 tasks.withType(JavaCompile) {
