--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,19 @@ publishing {
 group = 'com.github.hmcts'
 version = '1.4.0'
 
-allprojects {
-  sourceCompatibility = '17'
-  targetCompatibility = '17'
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
 }
 
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
+}
+
+// https://github.com/gradle/gradle/issues/16791
+tasks.withType(JavaExec).configureEach {
+  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
 }
 
 tasks.withType(Test) {
@@ -119,10 +125,10 @@ repositories {
 }
 
 def versions = [
-  junit           : '5.7.2',
+  junit           : '5.9.1',
   junitPlatform   : '1.7.2',
-  reformLogging   : '5.1.7',
-  spring : '2.5.7'
+  reformLogging   : '6.0.1',
+  spring : '2.7.6'
 ]
 
 ext.libraries = [
