--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ publishing {
 }
 
 group = 'com.github.hmcts'
-version = '1.4.4'
+version = '1.4.5'
 
 java {
   toolchain {
@@ -152,8 +152,10 @@ configurations.all {
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${versions.spring}"
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${versions.spring}"
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
 
   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.14.2"
+  implementation 'com.opencsv:opencsv:5.7.1'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${versions.spring}", {
