--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,7 @@ configurations.all {
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${versions.spring}"
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${versions.spring}"
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: "${versions.spring}"
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
 
   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.14.2"
