--- a/build.gradle
+++ b/build.gradle
@@ -77,9 +77,9 @@ project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: spring-boot-template"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
-    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.projectName", "PIP Data Models"
+    property "sonar.projectKey", "pip-data-models"
+    property "sonar.exclusions", sonarExclusions.join(', ')
   }
 }
 
