--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ publishing {
 }
 
 group = 'com.github.hmcts'
-version = '2.0.6'
+version = '2.1.0'
 
 java {
   toolchain {
@@ -128,17 +128,7 @@ def versions = [
   junit           : '5.9.3',
   junitPlatform   : '1.9.3',
   reformLogging   : '5.1.7',
-  spring : '2.7.12'
-]
-
-ext.libraries = [
-  junit5: [
-    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
-    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
-    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
-    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
-  ]
+  spring : '3.0.8'
 ]
 
 configurations.all {
@@ -158,7 +148,8 @@ dependencies {
   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.15.2"
   implementation 'com.opencsv:opencsv:5.7.1'
 
-  testImplementation libraries.junit5
+  testImplementation(platform('org.junit:junit-bom:5.9.3'))
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${versions.spring}", {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
