--- a/build.gradle
+++ b/build.gradle
@@ -119,22 +119,26 @@ repositories {
   maven { url 'https://jitpack.io' }
 }
 
-def versions = [
-  spring : '3.2.5'
-]
+ext {
+  log4JVersion = '2.23.1'
+  spring = '3.2.5'
+}
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: "${versions.spring}"
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: "${versions.spring}"
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: "${versions.spring}"
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: spring
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: spring
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: spring
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
+
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
 
   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.17.1"
   implementation 'com.opencsv:opencsv:5.9'
 
   testImplementation(platform('org.junit:junit-bom:5.10.2'))
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${versions.spring}", {
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring, {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
