--- a/.github/workflows/jitpack_build.yml
+++ b/.github/workflows/jitpack_build.yml
@@ -12,6 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: 21
     - name: Trigger Build in JitPack
       run: |
         echo "Triggering JitPack build"
