--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ publishing {
 }
 
 group = 'com.github.hmcts'
-version = '2.1.31'
+version = '2.1.32'
 
 java {
   toolchain {
@@ -51,14 +51,14 @@ test {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.18.2'
+  toolVersion = '10.20.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "7.6.0"
+  toolVersion = "7.7.0"
   sourceSets = [sourceSets.main, sourceSets.test]
-  reportsDir = file("$project.buildDir/reports/pmd")
+  reportsDir = file("${layout.buildDirectory.get()}/reports/pmd")
   ruleSetFiles = files("config/pmd/ruleset.xml")
 }
 
@@ -67,7 +67,7 @@ jacocoTestReport {
   reports {
     xml.required = true
     csv.required = false
-    xml.outputLocation.set(file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml"))
+    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
   }
 }
 
@@ -120,7 +120,7 @@ repositories {
 
 ext {
   log4JVersion = '2.24.1'
-  spring = '3.3.3'
+  spring = '3.3.4'
 }
 
 dependencies {
@@ -132,16 +132,16 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
 
-  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.18.0"
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.18.1"
   implementation 'com.opencsv:opencsv:5.9'
 
-  testImplementation(platform('org.junit:junit-bom:5.11.2'))
+  testImplementation(platform('org.junit:junit-bom:5.11.3'))
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring, {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
-  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.4', classifier: 'all'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.5', classifier: 'all'
 }
 
 task fortifyScan(type: JavaExec)  {
