--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.7'
+  id 'org.springframework.boot' version '3.4.2'
   id 'org.owasp.dependencycheck' version '10.0.3'
-  id 'com.github.ben-manes.versions' version '0.51.0'
+  id 'com.github.ben-manes.versions' version '0.52.0'
   id 'org.sonarqube' version '6.0.1.5171'
-  id 'io.freefair.lombok' version '8.11'
+  id 'io.freefair.lombok' version '8.12.1'
   id 'maven-publish'
 }
 
@@ -20,7 +21,7 @@ publishing {
 }
 
 group = 'com.github.hmcts'
-version = '2.2.5'
+version = '2.2.6'
 
 java {
   toolchain {
@@ -51,12 +52,12 @@ test {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.21.1'
+  toolVersion = '10.21.2'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "7.9.0"
+  toolVersion = "7.10.0"
   sourceSets = [sourceSets.main, sourceSets.test]
   reportsDir = file("${layout.buildDirectory.get()}/reports/pmd")
   ruleSetFiles = files("config/pmd/ruleset.xml")
@@ -120,14 +121,13 @@ repositories {
 
 ext {
   log4JVersion = '2.24.3'
-  spring = '3.4.1'
 }
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: spring
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: spring
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: spring
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.3'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.4'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
@@ -139,11 +139,11 @@ dependencies {
 
   testImplementation(platform('org.junit:junit-bom:5.11.4'))
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring, {
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
-  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.6', classifier: 'all'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.7', classifier: 'all'
 }
 
 task fortifyScan(type: JavaExec)  {
