--- a/build.gradle
+++ b/build.gradle
@@ -137,12 +137,7 @@ dependencies {
 
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-  testImplementation(platform('org.junit:junit-bom:5.12.2'))
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring, {
-    exclude group: 'junit', module: 'junit'
-    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-  }
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring
   testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.8', classifier: 'all'
 }
 
