--- a/.github/workflows/ado_artifacts_build.yaml
+++ b/.github/workflows/ado_artifacts_build.yaml
@@ -17,6 +17,19 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Get Commit hash
+        id: get_short_hash
+        run: echo "hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+      - name: Get Release version
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            VERSION="${{ github.ref_name }}-${{ steps.get_short_hash.outputs.hash }}"
+          else
+            VERSION="${{ github.ref_name }}"
+          fi
+          echo "RELEASE_VERSION=$VERSION" >> "$GITHUB_ENV"
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -30,5 +43,5 @@ jobs:
         env:
           AZURE_DEVOPS_ARTIFACT_USERNAME: ${{ secrets.AZURE_DEVOPS_ARTIFACT_USERNAME }}
           AZURE_DEVOPS_ARTIFACT_TOKEN: ${{ secrets.AZURE_DEVOPS_ARTIFACT_TOKEN }}
-          RELEASE_VERSION: ${{ github.ref_name }}
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
         shell: bash
