PUB-2899 - Updated build version

--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ publishing {
   }
 }
 
+def buildNumber = System.getenv("RELEASE_VERSION")?: "DEV-SNAPSHOT"
+
 group = 'com.github.hmcts'
-version = '2.3.5'
+version = buildNumber
 
 java {
   toolchain {
