--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
   id 'org.owasp.dependencycheck' version '10.0.3'
   id 'com.github.ben-manes.versions' version '0.52.0'
-  id 'org.sonarqube' version '6.1.0.5360'
+  id 'org.sonarqube' version '6.2.0.5505'
   id 'io.freefair.lombok' version '8.13.1'
   id 'maven-publish'
 }
@@ -63,12 +63,12 @@ test {
 
 checkstyle {
   maxWarnings = 0
-  toolVersion = '10.23.1'
+  toolVersion = '10.25.0'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "7.13.0"
+  toolVersion = "7.14.0"
   sourceSets = [sourceSets.main, sourceSets.test]
   reportsDir = file("${layout.buildDirectory.get()}/reports/pmd")
   ruleSetFiles = files("config/pmd/ruleset.xml")
@@ -128,26 +128,26 @@ repositories {
   mavenLocal()
   mavenCentral()
   maven {
-    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
+    url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
   }
 }
 
 ext {
   log4JVersion = '2.24.3'
-  spring = '3.4.5'
+  spring = '3.4.6'
 }
 
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: spring
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: spring
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: spring
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.8'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.9'
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
 
-  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.19.0"
-  implementation 'com.opencsv:opencsv:5.11'
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.19.1"
+  implementation 'com.opencsv:opencsv:5.11.1'
 
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
