--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
   id 'java-library'
-  id 'checkstyle'
+  id 'uk.gov.hmcts.java' version '0.12.67'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.7'
-  id 'org.owasp.dependencycheck' version '12.1.3'
   id 'com.github.ben-manes.versions' version '0.52.0'
   id 'org.sonarqube' version '6.2.0.5505'
   id 'io.freefair.lombok' version '8.14'
@@ -61,12 +60,6 @@ test {
   failFast = true
 }
 
-checkstyle {
-  maxWarnings = 0
-  toolVersion = '10.26.1'
-  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
-}
-
 pmd {
   toolVersion = "7.15.0"
   sourceSets = [sourceSets.main, sourceSets.test]
@@ -111,18 +104,8 @@ dependencyUpdates {
   }
 }
 
-// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
-  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-  // range of 0-10 fails the build, anything greater and it doesn't fail the build
-  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
   suppressionFile = 'config/owasp/suppressions.xml'
-  skipTestGroups  = false
-
-  analyzers {
-    // Disable scanning of .NET related binaries
-    assemblyEnabled = false
-  }
 }
 
 repositories {
