--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
   id 'java-library'
   id 'uk.gov.hmcts.java' version '0.12.67'
+  id 'checkstyle'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.7'
+  id 'org.owasp.dependencycheck' version '12.1.3'
   id 'com.github.ben-manes.versions' version '0.52.0'
   id 'org.sonarqube' version '6.2.0.5505'
   id 'io.freefair.lombok' version '8.14'
@@ -60,6 +62,10 @@ test {
   failFast = true
 }
 
+checkstyle {
+  toolVersion = '12.1.1'
+}
+
 pmd {
   toolVersion = "7.15.0"
   sourceSets = [sourceSets.main, sourceSets.test]
@@ -104,6 +110,7 @@ dependencyUpdates {
   }
 }
 
+// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
 }
