--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ dependencyUpdates {
 // https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
+  skipTestGroups  = false
 }
 
 repositories {
